# moonrepo-rust-vite-template

./: .gitignore  .prototools  Cargo.toml  README.md  moon.yml  package.json  pnpm-lock.yaml  tsconfig.options.json
.github/workflows/: ci.yml
.moon/: toolchain.yml  workspace.yml
apps/client/: moon.yml  package.json  tsconfig.json  vite.config.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
