[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
listenfd = "1.0.1"
rust-embed = "6.8.1"
salvo = { version = "0.50.2", features = ["compression", "caching-headers", "proxy", "serve-static"] }
tokio = { version = "1.29.1", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
