[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
listenfd = "1.0.1"
rust-embed = "6.8.1"
salvo = { version = "0.57.0", features = ["compression", "caching-headers", "proxy", "serve-static"] }
tokio = { version = "1.33.0", features = ["macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
